# Libreria-estandar-de-C

./: CMakeLists.txt  README.md  main.c
archivos/: archivos.c  archivos.h
cadenas/: cadenas.c  cadenas.h
funciones_comunes/: funciones_comunes.c  funciones_comunes.h
